# actixcontact

./: .env.example  Cargo.toml  README.MD
src/: config.rs  init.rs  main.rs
src/handlers/: auth.rs  contact.rs  mod.rs
src/handlers/contact/: get_all_contact.rs  mod.rs  post_contact.rs
src/models/: user.rs
src/routes/: mod.rs
src/utils/: hash.rs  jwt.rs
