[package]
name = "actix_hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
